# CUDA_gpca_proj1

./: .gitignore  .gitmodules  README.md
results/: magic_perf.txt  mcts_perf.txt  move_gen.txt  move_perf.txt
scripts/: prepare_tests.py
src/: .gitignore  CMakeLists.txt  main.cpp  main.cu
src/cli/: Cli.cpp  Cli.hpp  EngineUtils.cpp  EngineUtils.hpp  FenTranslator.cpp  FenTranslator.hpp  ParseTools.cpp  ParseTools.hpp  cli.cpp  cli.hpp
src/cpu_core/: Cli.cu  Cli.cuh  CpuCore.cu  CpuCore.cuh  GlobalState.cu  GlobalState.cuh  Mcts.cu  Mcts.cuh  MctsDisplay.cuh  MctsEngine.cu  MctsEngine.cuh  MctsNode.cuh  MctsTree.cuh  ProgressBar.cuh  TestRunner.cu  TestRunner.cuh  ThreadPool.cuh  Utils.cu  Utils.cuh  cpu_MoveGen.cuh  cpu_core.cpp  cpu_core.cu  cpu_core.cuh  cpu_core.hpp
src/cuda_core/: BaseMoveHashMap.cuh  BishopMap.cuh  BishopMapGenerator.cuh  BishopMapRuntime.cuh  BlackPawnMap.cuh  ChessMechanics.cuh  ComputeKernels.cu  ComputeKernels.cuh  FancyMagicBishopMap.cuh  FancyMagicRookMap.cuh  Helpers.cu  Helpers.cuh  KingMap.cuh  KnightMap.cu  KnightMap.cuh  Move.cuh  MoveGenerationUtils.cuh  MoveGenerator.cuh  QueenMap.cuh  RookMap.cu  RookMap.cuh  RookMapGenerator.cuh  RookMapRuntime.cuh  Stack.cuh  TextureRookMap.cu  TextureRookMap.cuh  WhitePawnMap.cuh  cuda_Array.cuh  cuda_BitOperations.cuh  cuda_Board.cuh  cuda_PackedBoard.cuh  helpers.cu  helpers.cuh
src/data_structs/: Board.hpp  Move.hpp  cpu_Board.hpp  cpu_Move.hpp
src/move_gen/table_based/: Board.hpp  ChessMechanics.hpp  Move.hpp  MoveGenerationUtils.hpp  MoveGenerator.cpp  MoveGenerator.hpp
src/move_gen/table_based/base_tables/: BaseMoveHashMap.hpp  BishopMapGenerator.hpp  FancyMagicRookMap.hpp  RookMapGenerator.hpp
src/move_gen/table_based/maps/: BishopMapGenerator.hpp  FancyMagicBishopMap.hpp  FancyMagicRookMap.hpp  MoveGenerationUtils.hpp  RookMapGenerator.hpp
src/move_gen/table_based/tables/: BishopMap.hpp  BlackPawnMap.hpp  KingMap.hpp  KnightMap.hpp  QueenMap.hpp  RookMap.cpp  RookMap.hpp  WhitePawnMap.hpp
src/ported/: CMakeLists.txt  CliPorts.cpp  CpuDefines.h  CpuMoveGen.cpp  CpuMoveGen.h  CpuTests.h  CpuUtils.h  FancyTest.cpp  MoveGenTest.cpp
src/tests/: CudaTests.cuh  FancyMagicTest.cu  MctsCorrectnessTest.cu  MctsPerfTest.cu  MoveGenPerfTest.cu  MoveGenTest.cu  RandomTest.cu  TestHelpers.cu
src/tests/cpu/: CpuTests.h  FancyTest.cpp  MoveGenTest.cpp
src/utilities/: BitOperations.hpp  BoardDefs.hpp  CompilationConstants.hpp
